--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:prod": "cd server && npm start",
     "start:dev": "concurrently \"cd server && npm run watch\" \"cd client && npm start\"",
     "install": "cd server && npm i && cd ../client && npm i",
-    "heroku-postbuild": "cd client && npm run build"
+    "heroku-postbuild": "cd client && npm run build",
+    "seed": "cd server && npm run seed"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "if-env": "^1.0.4"
+    "apollo-server-express": "^2.16.1",
+    "if-env": "^1.0.4",
+    "nodemon": "^2.0.4"
   },
   "devDependencies": {
     "concurrently": "^5.3.0"
